# fastapi-todo-app

./: .env  .example.env  .gitignore  .pre-commit-config.yaml  LICENSE  docker-compose.yml  dockerfile  nginx.conf.template  pyproject.toml  requirements.txt
app/: main.py
app/api/: deps.py  router.py
app/api/v1/: router.py
app/api/v1/endpoints/: label.py  todo.py
app/core/: config.py
app/crud/: base.py  label.py  todo.py
app/models/: __init__.py  label.py  todo.py
app/schemas/: label.py  todo.py
frontend/css/: app.css
frontend/html/: index.html
frontend/js/: app.js
migrations/: env.py
migrations/versions/: 40707756e270_init.py  b1a20969838c_change_datetime_fields_to_string.py  f16555afad43_add_is_complete_filed_to_todo.py
