[tool.poetry]
name = "fastapi-todo-list"
version = "0.0.1"
description = "Simple todo-list with FastAPI and Mithril.js"
authors = ["Stanislav Lyu. <wallseat@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
asyncpg = "^0.25.0"
psycopg2-binary = "^2.9.3"
uvicorn = "^0.17.6"
alembic = "^1.7.7"
sqlalchemy2-stubs = "^0.0.2-alpha.21"
SQLAlchemy = {version = "^1.4.32"}

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pre-commit = "^2.17.0"
mypy = "^0.942"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
